compiler/driver/tests/snapshots/diagnostics_snapshots__diag_assign_immutable.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(& out)
---
error[E006]: cannot assign to immutable variable `x`
  --> test.ny:3:5
   = help: use `let mut x = ...` to make it mutable
