compiler/driver/tests/snapshots/diagnostics_snapshots__diag_borrow_at_borrow_stage.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E012]: `a` was moved at line 3
  --> b.ny:4:11
   = note: keep using `a`:
  let copy = clone a
warning[W003]: unused variable `b`
  --> b.ny:3:9
   = help: prefix with `_` if intentional: `let _b = ...`
   = help: or remove the binding if `b` is not needed
