compiler/driver/tests/snapshots/diagnostics_snapshots__diag_function_no_return.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(& out)
---

