compiler/driver/tests/snapshots/diagnostics_snapshots__diag_hrtb_fn_ptr_ok.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error: 'f' is not callable
  --> test.ny:2:16
