compiler/driver/tests/snapshots/diagnostics_snapshots__diag_if_expr_type_mismatch.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error: If expression branches must have the same type
  --> <source>:1:1
