compiler/driver/tests/snapshots/diagnostics_snapshots__diag_modulo_type_error.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error: Type mismatch in arithmetic operation
  --> <source>:1:1
